add arcbbb in contributor list

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 F9 microkernel is written by:
   Jim Huang <jserv.tw@gmail.com>
   George Kang <georgekang03@gmail.com>
+  Shih-Po Hung <arcbbb@gmail.com>
