--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,4 @@ F9 microkernel is written by:
   Jim Huang <jserv.tw@gmail.com>
   George Kang <georgekang03@gmail.com>
   Shih-Po Hung <arcbbb@gmail.com>
+  Viller Hsiao <villerhsiao@realtek.com>
