add southernbear in author list

--- a/AUTHORS
+++ b/AUTHORS
@@ -3,3 +3,4 @@ F9 microkernel is written by:
   George Kang <georgekang03@gmail.com>
   Shih-Po Hung <arcbbb@gmail.com>
   Viller Hsiao <villerhsiao@gmail.com>
+  Zhe-An Lin <xq5530303@gmail.com>
