add DreamLinuxer in author list

--- a/AUTHORS
+++ b/AUTHORS
@@ -4,3 +4,4 @@ F9 microkernel is written by:
   Shih-Po Hung <arcbbb@gmail.com>
   Viller Hsiao <villerhsiao@gmail.com>
   Zhe-An Lin <xq5530303@gmail.com>
+  Chao-Hong Chen <DreamLinuxer@gmail.com>
