AUTHORS: mention external identities

--- a/AUTHORS
+++ b/AUTHORS
@@ -5,3 +5,10 @@ F9 microkernel is written by:
   Viller Hsiao <villerhsiao@gmail.com>
   Zhe-An Lin <xq5530303@gmail.com>
   Chao-Hong Chen <DreamLinuxer@gmail.com>
+
+The external parts were copyrighted by:
+  University of California
+  Karlsruhe University
+  University of New South Wales
+  Volkmar Uhlig, IBM Corporation
+  Rich Felker
