add Ahmed Ammar into author list

--- a/AUTHORS
+++ b/AUTHORS
@@ -5,6 +5,7 @@ F9 microkernel is written by:
   Viller Hsiao <villerhsiao@gmail.com>
   Zhe-An Lin <xq5530303@gmail.com>
   Chao-Hong Chen <DreamLinuxer@gmail.com>
+  Ahmed Ammar <aammar@genesi-usa.com>
 
 The external parts were copyrighted by:
   University of California
