--- a/AUTHORS
+++ b/AUTHORS
@@ -7,6 +7,10 @@ F9 microkernel is written by:
   Chao-Hong Chen <DreamLinuxer@gmail.com>
   Ahmed Ammar <aammar@genesi-usa.com>
 
+F9 was derived from l4xpresso project developed by
+Sergey Klyaus <myautneko@gmail.com>, ITMO University
+The original license is MIT License.
+
 The external parts were copyrighted by:
   University of California
   Karlsruhe University
