--- a/AUTHORS
+++ b/AUTHORS
@@ -8,12 +8,12 @@ F9 microkernel is written by:
   Ahmed Ammar <aammar@genesi-usa.com>
 
 F9 was derived from l4xpresso project developed by
-Sergey Klyaus <myautneko@gmail.com>, ITMO University
-The original license is MIT License.
+  Sergey Klyaus <myautneko@gmail.com>, ITMO University
+  (MIT License)
 
 The external parts were copyrighted by:
-  University of California
-  Karlsruhe University
-  University of New South Wales
-  Volkmar Uhlig, IBM Corporation
-  Rich Felker
+  University of California (FreeBSD)
+  Karlsruhe University (L4Ka)
+  University of New South Wales (L4Ka, OKL4)
+  Volkmar Uhlig, IBM Corporation (L4Ka)
+  Rich Felker (musl-libc)
