update author list: Lazy Yan

--- a/AUTHORS
+++ b/AUTHORS
@@ -6,6 +6,7 @@ F9 microkernel is written by:
   Zhe-An Lin <xq5530303@gmail.com>
   Chao-Hong Chen <DreamLinuxer@gmail.com>
   Ahmed Ammar <aammar@genesi-usa.com>
+  Zong-Yuan Chow <slp-baby@hotmail.com>
 
 F9 was derived from l4xpresso project developed by
   Sergey Klyaus <myautneko@gmail.com>, ITMO University
