update author list: Jeff Liaw

--- a/AUTHORS
+++ b/AUTHORS
@@ -7,6 +7,7 @@ F9 microkernel is written by:
   Chao-Hong Chen <DreamLinuxer@gmail.com>
   Ahmed Ammar <aammar@genesi-usa.com>
   Zong-Yuan Chow <slp-baby@hotmail.com>
+  Jeff Liaw <rampant1018@gmail.com>
 
 F9 was derived from l4xpresso project developed by
   Sergey Klyaus <myautneko@gmail.com>, ITMO University
