--- a/AUTHORS
+++ b/AUTHORS
@@ -8,6 +8,7 @@ F9 microkernel is written by:
   Ahmed Ammar <aammar@genesi-usa.com>
   Zong-Yuan Chow <slp-baby@hotmail.com>
   Jeff Liaw <rampant1018@gmail.com>
+  Louie Lu <louie.lu@hopebaytech.com>
 
 F9 was derived from l4xpresso project developed by
   Sergey Klyaus <myautneko@gmail.com>, ITMO University
